progress on structured concurrency